feat: WSC-1461 manage guest accounts type (#56)
* feat: use getMySelf API to authenticate the user on AuthenticationFilter
* feat: add user type on UserDto on the getUsers and getUserById APIs
* chore: refactor UserPrincipal using auth token
* chore: remove temporary and external from MemberDto