@@ -5,6 +5,7 @@
 package com.zextras.carbonio.chats.core.infrastructure.profiling.impl;
 
 import com.zextras.carbonio.chats.core.data.model.UserProfile;
+import com.zextras.carbonio.chats.core.data.type.UserType;
 import com.zextras.carbonio.chats.core.exception.ForbiddenException;
 import com.zextras.carbonio.chats.core.exception.ProfilingException;
 import com.zextras.carbonio.chats.core.infrastructure.profiling.ProfilingService;
@@ -17,12 +18,9 @@ import jakarta.inject.Singleton;
 import java.util.List;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Singleton
 public class UserManagementProfilingService implements ProfilingService {
-
-  private static final String AUTH_COOKIE = "ZM_AUTH_TOKEN";
 
   private final UserManagementClient userManagementClient;
 
@@ -33,40 +31,38 @@ public class UserManagementProfilingService implements ProfilingService {
 
   @Override
   public Optional<UserProfile> getById(UserPrincipal principal, UUID userId) {
-    String token =
-        principal
-            .getAuthCredentialFor(AuthenticationMethod.ZM_AUTH_TOKEN)
-            .orElseThrow(ForbiddenException::new);
+    String token = principal.getAuthToken().orElseThrow(ForbiddenException::new);
     return Optional.ofNullable(
         userManagementClient
-            .getUserById(String.format("%s=%s", AUTH_COOKIE, token), userId.toString())
+            .getUserById(
+                String.format("%s=%s", AuthenticationMethod.ZM_AUTH_TOKEN.name(), token),
+                userId.toString())
             .map(
-                userInfo ->
-                    UserProfile.create(userInfo.getId().getUserId())
-                        .name(userInfo.getFullName())
-                        .email(userInfo.getEmail())
-                        .domain(userInfo.getDomain()))
+                u ->
+                    UserProfile.create(u.getId().getUserId())
+                        .name(u.getFullName())
+                        .email(u.getEmail())
+                        .domain(u.getDomain())
+                        .type(UserType.valueOf(u.getType().name())))
             .recover(UserNotFound.class, e -> null)
-            .getOrElseThrow((fail) -> new ProfilingException(fail)));
+            .getOrElseThrow(fail -> new ProfilingException(fail)));
   }
 
   @Override
   public List<UserProfile> getByIds(UserPrincipal principal, List<String> userIds) {
-    String token =
-        principal
-            .getAuthCredentialFor(AuthenticationMethod.ZM_AUTH_TOKEN)
-            .orElseThrow(ForbiddenException::new);
+    String token = principal.getAuthToken().orElseThrow(ForbiddenException::new);
     return userManagementClient
-        .getUsers(String.join("=", AUTH_COOKIE, token), userIds)
-        .getOrElseThrow((fail) -> new ProfilingException(fail))
+        .getUsers(String.join("=", AuthenticationMethod.ZM_AUTH_TOKEN.name(), token), userIds)
+        .getOrElseThrow(fail -> new ProfilingException(fail))
         .stream()
         .map(
             u ->
                 UserProfile.create(u.getId().getUserId())
                     .name(u.getFullName())
                     .email(u.getEmail())
-                    .domain(u.getDomain()))
-        .collect(Collectors.toList());
+                    .domain(u.getDomain())
+                    .type(UserType.valueOf(u.getType().name())))
+        .toList();
   }
 
   @Override
