@@ -4,7 +4,6 @@
 
 package com.zextras.carbonio.chats.it.tools;
 
-import static org.mockserver.model.Header.header;
 import static org.mockserver.model.HttpRequest.request;
 
 import com.zextras.carbonio.chats.core.logging.ChatsLogger;
@@ -12,10 +11,10 @@ import com.zextras.carbonio.usermanagement.entities.UserInfo;
 import jakarta.annotation.Nullable;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.junit.jupiter.api.extension.ExtensionContext.Store.CloseableResource;
 import org.mockserver.integration.ClientAndServer;
 import org.mockserver.model.ClearType;
+import org.mockserver.model.Cookie;
 import org.mockserver.model.HttpRequest;
 import org.mockserver.model.HttpResponse;
 import org.mockserver.model.JsonBody;
@@ -41,8 +40,7 @@ public class UserManagementMockServer extends ClientAndServer implements Closeab
   public void verify(String method, String path, @Nullable String cookies, int iterationsNumber) {
     HttpRequest request = request().withMethod(method).withPath(path);
     Optional.ofNullable(cookies)
-        .ifPresent(
-            c -> request.withHeaders(header("Cookie", String.format("ZM_AUTH_TOKEN=%s", c))));
+        .ifPresent(c -> request.withCookies(new Cookie("ZM_AUTH_TOKEN", c)));
 
     verify(request, VerificationTimes.exactly(iterationsNumber));
     clear(request, ClearType.LOG);
@@ -59,7 +57,7 @@ public class UserManagementMockServer extends ClientAndServer implements Closeab
         .withMethod("GET")
         .withPath("/users/?")
         .withQueryStringParameters(
-            usersIds.stream().map(p -> Parameter.param("userIds", p)).collect(Collectors.toList()));
+            usersIds.stream().map(p -> Parameter.param("userIds", p)).toList());
   }
 
   public void mockUsersBulk(List<String> usersIds, List<UserInfo> usersInfo, boolean success) {
